chore: add google-java-format + service refactor